tests/ui/c-variadic/parse-errors.e2015.stderr
error: missing pattern for `...` argument
  --> $DIR/parse-errors.rs:10:28
   |
LL |     unsafe extern "C" fn f(...) {
   |                            ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #FIXME <https://github.com/rust-lang/rust/issues/FIXME>
note: the lint level is defined here
  --> $DIR/parse-errors.rs:6:9
   |
LL | #![deny(varargs_without_pattern)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^
help: name the argument, or use `_` to continue ignoring it
   |
LL |     unsafe extern "C" fn f(_: ...) {
   |                            ++

error: missing pattern for `...` argument
  --> $DIR/parse-errors.rs:13:32
   |
LL |         unsafe extern "C" fn f(...) {}
   |                                ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #FIXME <https://github.com/rust-lang/rust/issues/FIXME>
help: name the argument, or use `_` to continue ignoring it
   |
LL |         unsafe extern "C" fn f(_: ...) {}
   |                                ++

error: missing pattern for `...` argument
  --> $DIR/parse-errors.rs:19:32
   |
LL |         unsafe extern "C" fn f(...) {}
   |                                ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #FIXME <https://github.com/rust-lang/rust/issues/FIXME>
help: name the argument, or use `_` to continue ignoring it
   |
LL |         unsafe extern "C" fn f(_: ...) {}
   |                                ++

error: aborting due to 3 previous errors

